--- a/llm/notebooks/llm-vector-db.ipynb
+++ b/llm/notebooks/llm-vector-db.ipynb
@@ -188,12 +188,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": null,
    "id": "d616c9bc",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Prework (with thanks to Jon R for identifying and fixing a bug in this!)\n",
+    "# Prework\n",
     "\n",
     "result = collection.get(include=['embeddings', 'documents', 'metadatas'])\n",
     "vectors = np.array(result['embeddings'])\n",
