--- a/llm/notebooks/llm-vector-db.ipynb
+++ b/llm/notebooks/llm-vector-db.ipynb
@@ -5,7 +5,7 @@
    "id": "2c398c23",
    "metadata": {},
    "source": [
-    "# Study case for Vector DB information store\n",
+    "# Study case for Vector DB information store (RAG)\n",
     "- Load documents (.MD files) and save as a vector in Chroma;\n",
     "- Retrieve information using Langchain for the LLM answer process;\n",
     "- Use Gradio as WebUI."
