fix: reduce number of chunks

--- a/llm/notebooks/llm-vector-db.ipynb
+++ b/llm/notebooks/llm-vector-db.ipynb
@@ -1480,7 +1480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 129,
    "id": "8b678386",
    "metadata": {},
    "outputs": [],
@@ -1492,7 +1492,7 @@
     "memory = ConversationBufferMemory(memory_key='chat_history', return_messages=True)\n",
     "\n",
     "# the retriever is an abstraction over the VectorStore that will be used during RAG; k is how many chunks to use\n",
-    "retriever = vectorstore.as_retriever(search_kwargs={\"k\": 25})\n",
+    "retriever = vectorstore.as_retriever(search_kwargs={\"k\": 10})\n",
     "\n",
     "# putting it together: set up the conversation chain with the GPT 4o mini, the vector store and memory\n",
     "conversation_chain = ConversationalRetrievalChain.from_llm(llm=llm, retriever=retriever, memory=memory)"
@@ -1500,16 +1500,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 130,
    "id": "347b99bf",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-04-24 11:59:06,795 - INFO - HTTP Request: POST https://api.openai.com/v1/embeddings \"HTTP/1.1 200 OK\"\n",
+      "2025-04-24 11:59:07,606 - INFO - HTTP Request: POST https://api.openai.com/v1/chat/completions \"HTTP/1.1 200 OK\"\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "\n",
-      "Answer: Maxine received the prestigious IIOTY 2023 award.\n"
+      "Answer: I don't have access to information about the recipients of the IIOTY award in 2023.\n"
      ]
     }
    ],
