feat: add subtitles

--- a/llm/notebooks/langchain-custom-tool.ipynb
+++ b/llm/notebooks/langchain-custom-tool.ipynb
@@ -42,6 +42,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ebbdaf22",
+   "metadata": {},
+   "source": [
+    "### Setup model and load env variables"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 60,
    "id": "99bf24fa",
@@ -54,6 +62,14 @@
     "load_dotenv(override=True)\n",
     "GOOGLE_GEMINI_KEY = os.environ['GOOGLEAI_API_KEY']\n",
     "WEATHER_API_KEY = os.environ['WEATHER_API_KEY'] # https://www.weatherapi.com/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ee435a4e",
+   "metadata": {},
+   "source": [
+    "### Setup tools"
    ]
   },
   {
@@ -84,6 +100,14 @@
     "        return f\"Could not retrieve weather data for {location}.\"   \n",
     "\n",
     "tools = [get_weather]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8be18ec3",
+   "metadata": {},
+   "source": [
+    "### Create agent (Gemini)"
    ]
   },
   {
@@ -133,6 +157,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "75d2acda",
+   "metadata": {},
+   "source": [
+    "### Setup message history"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 63,
    "id": "52c2d140",
@@ -172,6 +204,14 @@
     "    [\"I need to know the weather in New York\", \"default\"],\n",
     "    [\"Is it raining in Tokyo?\", \"default\"]\n",
     "]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "31a764d6",
+   "metadata": {},
+   "source": [
+    "### Start Gradio Chat UI"
    ]
   },
   {
