fix: add confusion matrix

--- a/nlp/notebooks/sentiment-analysis-naive-bayes.ipynb
+++ b/nlp/notebooks/sentiment-analysis-naive-bayes.ipynb
@@ -970,6 +970,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d725de12",
+   "metadata": {},
+   "source": [
+    "### Confusion Matrix"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 15,
    "id": "d519bedd",
