--- a/llm/notebooks/langchain-custom-tool.ipynb
+++ b/llm/notebooks/langchain-custom-tool.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 7,
    "id": "8db00e6e",
    "metadata": {},
    "outputs": [],
@@ -21,13 +21,12 @@
     "from dotenv import load_dotenv\n",
     "import gradio as gr\n",
     "import requests\n",
-    "import gradio as gr\n",
     "from typing import Dict, Any"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 8,
    "id": "c8527949",
    "metadata": {},
    "outputs": [],
@@ -51,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 9,
    "id": "99bf24fa",
    "metadata": {},
    "outputs": [],
@@ -74,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "c29abd57",
    "metadata": {},
    "outputs": [],
@@ -112,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 11,
    "id": "926f3193",
    "metadata": {},
    "outputs": [],
@@ -166,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 12,
    "id": "52c2d140",
    "metadata": {},
    "outputs": [],
@@ -216,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "id": "6eb96f2c",
    "metadata": {},
    "outputs": [
@@ -224,15 +223,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "* Running on local URL:  http://127.0.0.1:7868\n",
-      "\n",
-      "To create a public link, set `share=True` in `launch()`.\n"
+      "* Running on local URL:  http://127.0.0.1:7860\n",
+      "* To create a public link, set `share=True` in `launch()`.\n"
      ]
     },
     {
      "data": {
       "text/html": [
-       "<div><iframe src=\"http://127.0.0.1:7868/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+       "<div><iframe src=\"http://127.0.0.1:7860/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -252,7 +250,8 @@
       "Invoking: `get_weather` with `{'location': 'São Paulo'}`\n",
       "\n",
       "\n",
-      "\u001b[0m\u001b[36;1m\u001b[1;3m{'city': 'São Paulo', 'temperature': 22.2, 'unidade': 'Celsius', 'condition': 'Partly cloudy', 'humidity': 83, 'wind_kph': 8.6, 'is_day': 1}\u001b[0m\u001b[32;1m\u001b[1;3mThe weather in São Paulo is partly cloudy with a temperature of 22.2°C. The humidity is at 83% and the wind is 8.6 km/h.\u001b[0m\n",
+      "\u001b[0m\u001b[36;1m\u001b[1;3m{'city': 'São Paulo', 'temperature': 27.3, 'unidade': 'Celsius', 'condition': 'Sunny', 'humidity': 54, 'wind_kph': 17.3, 'is_day': 1}\u001b[0m\u001b[32;1m\u001b[1;3mIt's 27.3°C in São Paulo today, with sunny skies and 54% humidity. The wind is at 17.3 km/h. A perfect day for outdoor activities!\n",
+      "\u001b[0m\n",
       "\n",
       "\u001b[1m> Finished chain.\u001b[0m\n"
      ]
@@ -274,7 +273,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ai-study",
+   "display_name": "ai-env",
    "language": "python",
    "name": "python3"
   },
